crates/general/fixtures/invalid/chained_comparison.zt
-- Comparisons are non-associative.

{
  bad = 1 < 2 < 3;
}
